Ajout liste pour la navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li>Accueil</li>
+      <li>La carte</li>
+      <li>À propos</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
   <h1>Bienvenue Chez La Croix Blanche</h1>
   <p>Cuisine tradionnelle Française</p>
 </body>
