Réalisation de la strucure HTML pour la page d'accueil

--- a/index.html
+++ b/index.html
@@ -7,15 +7,156 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li>Accueil</li>
-      <li>La carte</li>
-      <li>À propos</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
-  <h1>Bienvenue Chez La Croix Blanche</h1>
-  <p>Cuisine tradionnelle Française</p>
+  <header>
+    <div class="container-nav">
+      <div class="logo"></div>
+      <div class="nav">
+        <nav>
+          <ul>
+            <li>Accueil</li>
+            <li>La carte</li>
+            <li>À propos</li>
+            <li>Contact</li>
+            <li>05 56 30 97 89</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="container-header">
+      <h1>Bienvenue Chez La Croix Blanche</h1>
+      <p>Cuisine Tradionnelle Française</p>
+    </div>
+  </header>
+  <main>
+    <section class="restaurant">
+      <div class="titre">
+        <h2>Le Restaurant</h2>
+        <h3>Tradition & Modernité</h3>
+      </div>
+      <div class="texte-intro">
+        <p>À la recherche d’une expérience culinaire unique entre amis ou en famille ? Vous êtes au bon endroit. Notre restaurant à Bordeaux se fait un plaisir de vous accueillir dans une ambiance chaleureuse et conviviale.</p>
+        <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
+      </div>
+      <div class="slideshow"></div>
+    </section>
+    <section class="prestations">
+      <div class="titre">
+        <h2>Nos Prestations</h2>
+        <h3>Eveillez Vos Sens</h3>
+      </div>
+      <div class="texte-intro">
+        <p>Découvrez notre carte destinée au palais les plus fins. Laissez-vous porter par des saveurs aussi douces qu’explosives pour une expérience culinaire unique.</p>
+      </div>
+      <div class="container-prestations">
+        <div class="la-carte"></div>
+        <div class="la-cave"></div>
+        <div class="cta">
+          <a href="" target="_blank">Lire la suite</a>
+        </div>
+      </div>
+    </section>
+    <section class="qui-sommes-nous">
+      <div class="titre">
+        <h2>Qui Sommes-Nous ?</h2>
+        <h3>Notre Histoire</h3>
+      </div>
+      <div class="texte-presentation">
+        <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. Notre chef, Mohamed, avec plus de 20 ans d'expérience, crée des plats qui célèbrent les saveurs locales tout en ajoutant une touche moderne.</p>
+        <p>Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
+      </div>
+      <div class="cta">
+        <a href="" target="_blank">Lire la suite</a>
+      </div>
+    </section>
+    <section class="infos-pratiques">
+      <div class="titre">
+        <h2>Infos Pratiques</h2>
+        <h3>Tout Savoir</h3>
+      </div>
+      <div class="container-infos-pratiques">
+        <div class="acces">
+          <h4>Accès</h4>
+          <ul>
+            <li>Adresse : 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
+            <li>Parking : 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
+            <li>Bus : Ligne G - 2 - 82 - s57</li>
+          </ul>
+        </div>
+        <div class="horaires">
+          <h4>Horaires</h4>
+          <div class="semaine">
+            <ul>
+              <li><strong>Du lundi au vendredi</strong></li>
+              <li>Midi 12h00 - 14h00</li>
+              <li>Soir 19h00 - 22h00</li>
+            </ul>
+          </div>
+          <div class="week-end">
+            <ul>
+              <li><strong>Le samedi et dimanche</strong></li>
+              <li>Fermé</li>
+            </ul>
+          </div>
+        </div>
+        <div class="services">
+          <h4>Services</h4>
+          <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande</p>
+        </div>
+        <div class="paiement">
+          <h4>Moyens de paiement</h4>
+          <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, tickets restaurants</p>
+        </div>
+        <div class="map"></div>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="titre">
+        <h2>Contact</h2>
+        <h3>Réservez Maintenant !</h3>
+      </div>
+      <div class="container-reservation">
+        <p>Vous pouvez nous joindre au :</p>
+        <p>05 56 30 97 89</p>
+        <p>OU par e-mail :</p>
+      </div>
+      <div class="cta">
+        <a href="" target="_blank">Demande de réservation *</a>
+        <p>* Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="container-footer">
+      <div class="coordonnees">
+        <h5>La Croix Blanche</h5>
+        <ul>
+          <li>05 56 30 97 89</li>
+          <li>62 rue de La Croix Blanche, 33000 BORDEAUX</li>
+          <li>Du lundi au vendredi 12h00 - 14h00 et 19h00 - 22h00</li>
+        </ul>
+      </div>
+      <div class="sous-navigation">
+        <h5>Navigation</h5>
+        <ul>
+          <li>Accueil</li>
+          <li>La carte</li>
+          <li>À Propos</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="reseaux-sociaux">
+        <h5></h5>
+        <div class="instagram"></div>
+        <div class="facebook"></div>
+        <div class="tripadvisor"></div>
+      </div>
+      <div class="mentions-legales">
+        <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par :</p>
+        <ul>
+          <li>nicolas-monmerque.com</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
