Création de la structure de la page La Carte

--- a/la_carte.html
+++ b/la_carte.html
@@ -7,7 +7,127 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>La Carte</h1>
-  <h6>Des produits frais et de saison</h6>
+  <header>
+    <div class="container-nav">
+      <div class="logo"></div>
+      <div class="nav">
+        <nav>
+          <ul>
+            <li>Accueil</li>
+            <li>La carte</li>
+            <li>À propos</li>
+            <li>Contact</li>
+            <li>05 56 30 97 89</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="container-header">
+      <h1>La Carte</h1>
+      <h6>Des produits frais et de saison</h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+      <div class="plats"></div>
+    </div>
+  </header>
+  <main>
+    <section class="menu">
+      <div class="titre">
+        <h2>Menu</h2>
+        <h3>Midi</h3>
+      </div>
+      <div class="container-menu">
+        <div id="entrees"></div>
+        <div id="plats"></div>
+        <div id="desserts"></div>
+      </div>
+    </section>
+    <section class="carte">
+      <div class="titre">
+        <h2>Carte</h2>
+        <h3>Midi et Soir</h3>
+      </div>
+      <div class="container-carte">
+        <div id="entrees"></div>
+        <div id="viandes-poissons"></div>
+        <div id="desserts"></div>
+      </div>
+    </section>
+    <section class="cave">
+      <div class="titre">
+        <h2>Cave</h2>
+        <h3>Nos Vins</h3>
+      </div>
+      <div class="texte-cave">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula pahilo de que hurgy dolum.</p>
+      </div>
+      <div id="vins">
+        <form>
+          <p>Notre sélection de vin :</p>
+          <div>
+            <input type="radio" id="1" name="bulles" value="bulles" />
+            <label for="1">Nos Bulles</label>
+
+            <input type="radio" id="2" name="roses" value="roses" />
+            <label for="2">Nos Rosés</label>
+
+            <input type="radio" id="3" name="blancs" value="blancs" />
+            <label for="3">Nos Blancs</label>
+
+            <input type="radio" id="4" name="rouges" value="rouges" />
+            <label for="4">Nos Rouges</label>
+          </div>
+        </form>
+        <div id="selectVins"></div>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="titre">
+        <h2>Contact</h2>
+        <h3>Réservez Maintenant !</h3>
+      </div>
+      <div class="container-reservation">
+        <p>Vous pouvez nous joindre au :</p>
+        <p>05 56 30 97 89</p>
+        <p>OU par e-mail :</p>
+      </div>
+      <div class="cta">
+        <a href="" target="_blank">Demande de réservation *</a>
+        <p>* Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="container-footer">
+      <div class="coordonnees">
+        <h5>La Croix Blanche</h5>
+        <ul>
+          <li>05 56 30 97 89</li>
+          <li>62 rue de La Croix Blanche, 33000 BORDEAUX</li>
+          <li>Du lundi au vendredi 12h00 - 14h00 et 19h00 - 22h00</li>
+        </ul>
+      </div>
+      <div class="sous-navigation">
+        <h5>Navigation</h5>
+        <ul>
+          <li>Accueil</li>
+          <li>La carte</li>
+          <li>À Propos</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="reseaux-sociaux">
+        <h5></h5>
+        <div class="instagram"></div>
+        <div class="facebook"></div>
+        <div class="tripadvisor"></div>
+      </div>
+      <div class="mentions-legales">
+        <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par :</p>
+        <ul>
+          <li>nicolas-monmerque.com</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
