Création de la navigation

--- a/a_propos.html
+++ b/a_propos.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <header>
+    <div id="navigation"></div>
+    <div class="container-header">
+      <h1>À Propos</h1>
+      <h6>Découvrez notre histoire...</h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+      <div class="plats"></div>
+    </div>
+  </header>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
