--- a/index.html
+++ b/index.html
@@ -8,20 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="container-nav">
-      <div class="logo"></div>
-      <div class="nav">
-        <nav>
-          <ul>
-            <li>Accueil</li>
-            <li>La carte</li>
-            <li>À propos</li>
-            <li>Contact</li>
-            <li>05 56 30 97 89</li>
-          </ul>
-        </nav>
-      </div>
-    </div>
+    <div id="navigation"></div>
     <div class="container-header">
       <h1>Bienvenue Chez La Croix Blanche</h1>
       <p>Cuisine Tradionnelle Française</p>
@@ -158,5 +145,6 @@
       </div>
     </div>
   </footer>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
