--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <header>
+    <div id="navigation"></div>
+    <div class="container-header">
+      <h1>Contact</h1>
+      <h6>Réservez votre table chez La Croix Blanche !</h6>
+      <p>Offrez-vous une parenthèse gourmande riche en saveurs et en couleurs. Remplissez le formulaire ci-dessous pour soumettre une demande de réservation. Nous reviendrons vers vous dans les plus bref délais afin de vous confirmer votre demande.</p>
+      <div class="plats"></div>
+    </div>
+  </header>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
