--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
       <div class="plats"></div>
     </div>
   </header>
+  <footer>
+    <div id="footer"></div>
+  </footer>
   <script src="scripts.js" defer></script>
 </body>
 </html>
