Création des blocs pour infos pratiques et réserver maintenant

--- a/a_propos.html
+++ b/a_propos.html
@@ -16,6 +16,9 @@
       <div class="plats"></div>
     </div>
   </header>
+  <main>
+    <section id="reservation" class="contact"></section>
+  </main>
   <footer>
     <div id="footer"></div>
   </footer>
