--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
       <div class="plats"></div>
     </div>
   </header>
+  <main>
+    <section id="infos" class="infos-pratiques"></section>
+  </main>
   <footer>
     <div id="footer"></div>
   </footer>
