--- a/index.html
+++ b/index.html
@@ -55,62 +55,8 @@
         <a href="" target="_blank">Lire la suite</a>
       </div>
     </section>
-    <section class="infos-pratiques">
-      <div class="titre">
-        <h2>Infos Pratiques</h2>
-        <h3>Tout Savoir</h3>
-      </div>
-      <div class="container-infos-pratiques">
-        <div class="acces">
-          <h4>Accès</h4>
-          <ul>
-            <li>Adresse : 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
-            <li>Parking : 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
-            <li>Bus : Ligne G - 2 - 82 - s57</li>
-          </ul>
-        </div>
-        <div class="horaires">
-          <h4>Horaires</h4>
-          <div class="semaine">
-            <ul>
-              <li><strong>Du lundi au vendredi</strong></li>
-              <li>Midi 12h00 - 14h00</li>
-              <li>Soir 19h00 - 22h00</li>
-            </ul>
-          </div>
-          <div class="week-end">
-            <ul>
-              <li><strong>Le samedi et dimanche</strong></li>
-              <li>Fermé</li>
-            </ul>
-          </div>
-        </div>
-        <div class="services">
-          <h4>Services</h4>
-          <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande</p>
-        </div>
-        <div class="paiement">
-          <h4>Moyens de paiement</h4>
-          <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, tickets restaurants</p>
-        </div>
-        <div class="map"></div>
-      </div>
-    </section>
-    <section class="contact">
-      <div class="titre">
-        <h2>Contact</h2>
-        <h3>Réservez Maintenant !</h3>
-      </div>
-      <div class="container-reservation">
-        <p>Vous pouvez nous joindre au :</p>
-        <p>05 56 30 97 89</p>
-        <p>OU par e-mail :</p>
-      </div>
-      <div class="cta">
-        <a href="" target="_blank">Demande de réservation *</a>
-        <p>* Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
-      </div>
-    </section>
+    <section id="infos" class="infos-pratiques"></section>
+    <section id="reservation" class="contact"></section>
   </main>
   <footer>
     <div id="footer"></div>
