--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div id="navigation"></div>
-    <div class="container-header">
+    <div class="header-container">
       <h1>Contact</h1>
       <h6>Réservez votre table chez La Croix Blanche !</h6>
       <p>Offrez-vous une parenthèse gourmande riche en saveurs et en couleurs. Remplissez le formulaire ci-dessous pour soumettre une demande de réservation. Nous reviendrons vers vous dans les plus bref délais afin de vous confirmer votre demande.</p>
