--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div id="navigation"></div>
-    <div class="container-header">
+    <div class="header-container">
       <h1>Bienvenue Chez La Croix Blanche</h1>
       <p>Cuisine Tradionnelle Française</p>
     </div>
@@ -24,7 +24,7 @@
         <p>À la recherche d’une expérience culinaire unique entre amis ou en famille ? Vous êtes au bon endroit. Notre restaurant à Bordeaux se fait un plaisir de vous accueillir dans une ambiance chaleureuse et conviviale.</p>
         <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
       </div>
-      <div class="slideshow"></div>
+      <div class="slider"></div>
     </section>
     <section class="prestations">
       <div class="titre">
@@ -34,7 +34,7 @@
       <div class="texte-intro">
         <p>Découvrez notre carte destinée au palais les plus fins. Laissez-vous porter par des saveurs aussi douces qu’explosives pour une expérience culinaire unique.</p>
       </div>
-      <div class="container-prestations">
+      <div class="prestations-container">
         <div class="la-carte"></div>
         <div class="la-cave"></div>
         <div class="cta">
