--- a/la_carte.html
+++ b/la_carte.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div id="navigation"></div>
-    <div class="container-header">
+    <div class="header-container">
       <h1>La Carte</h1>
       <h6>Des produits frais et de saison</h6>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
@@ -22,7 +22,7 @@
         <h2>Menu</h2>
         <h3>Midi</h3>
       </div>
-      <div class="container-menu">
+      <div class="menu-container">
         <div id="entrees"></div>
         <div id="plats"></div>
         <div id="desserts"></div>
@@ -33,7 +33,7 @@
         <h2>Carte</h2>
         <h3>Midi et Soir</h3>
       </div>
-      <div class="container-carte">
+      <div class="carte-container">
         <div id="entrees"></div>
         <div id="viandes-poissons"></div>
         <div id="desserts"></div>
@@ -47,7 +47,7 @@
       <div class="texte-cave">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula pahilo de que hurgy dolum.</p>
       </div>
-      <div id="vins">
+      <div id="vins" class="vins-container">
         <form>
           <p>Notre sélection de vin :</p>
           <div>
