--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="container-footer">
+<div class="footer-container">
   <div class="coordonnees">
     <h5>La Croix Blanche</h5>
     <ul>
