--- a/reservation.html
+++ b/reservation.html
@@ -2,7 +2,7 @@
   <h2>Contact</h2>
   <h3>Réservez Maintenant !</h3>
 </div>
-<div class="container-reservation">
+<div class="reservation-container">
   <p>Vous pouvez nous joindre au :</p>
   <p>05 56 30 97 89</p>
   <p>OU par e-mail :</p>
