--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
   <title>Accueil</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div id="navigation"></div>
     <div class="header-container">
-      <h1>Bienvenue Chez La Croix Blanche</h1>
+      <h2>Bienvenue Chez</h2>
+      <h1>La Croix Blanche</h1>
       <p>Cuisine Tradionnelle Française</p>
     </div>
   </header>
   <main>
     <section class="restaurant">
-      <div class="titre">
-        <h2>Le Restaurant</h2>
-        <h3>Tradition & Modernité</h3>
-      </div>
-      <div class="texte-intro">
-        <p>À la recherche d’une expérience culinaire unique entre amis ou en famille ? Vous êtes au bon endroit. Notre restaurant à Bordeaux se fait un plaisir de vous accueillir dans une ambiance chaleureuse et conviviale.</p>
-        <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
+      <div class="content">
+        <div class="titre">
+          <h2>Le Restaurant</h2>
+          <h3>Tradition & Modernité</h3>
+        </div>
+        <div class="texte-intro">
+          <p>À la recherche d’une expérience culinaire unique entre amis ou en famille ? Vous êtes au bon endroit. Notre restaurant à Bordeaux se fait un plaisir de vous accueillir dans une ambiance chaleureuse et conviviale.</p>
+          <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
+        </div>
       </div>
       <div class="slider"></div>
     </section>
