--- a/nav.html
+++ b/nav.html
@@ -1,14 +1,14 @@
 <div class="nav-container">
-  <div class="logo"></div>
-  <div class="nav">
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="la_carte.html">La carte</a></li>
-        <li><a href="a_propos.html">À propos</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li>05 56 30 97 89</li>
-      </ul>
-    </nav>
+  <div class="logo">
+    <a href="index.html"><img src="images/logo-lcb-nav.svg" alt="La Croix Blanche" width="60"></a>
   </div>
+  <nav>
+    <ul>
+      <li class="nav-accueil"><a href="index.html">Accueil</a></li>
+      <li class="nav-la-carte"><a href="la_carte.html">La carte</a></li>
+      <li class="nav-a-propos"><a href="a_propos.html">À propos</a></li>
+      <li class="nav-contact"><a href="contact.html">Contact</a></li>
+      <li class="nav-telephone">05 56 30 97 89</li>
+    </ul>
+  </nav>
 </div>
