Structure et styles des section header, restaurant, prestations et qui sommes-nous de la page d'accueil

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-container">
+<div class="container">
   <div class="coordonnees">
     <h5>La Croix Blanche</h5>
     <ul>
@@ -17,7 +17,7 @@
     </ul>
   </div>
   <div class="reseaux-sociaux">
-    <h5></h5>
+    <h5>Retrouvez-moi sur</h5>
     <div class="instagram"></div>
     <div class="facebook"></div>
     <div class="tripadvisor"></div>
