--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   <header>
     <div id="navigation"></div>
     <div class="header-container">
-      <h2>Bienvenue Chez</h2>
-      <h1>La Croix Blanche</h1>
-      <p>Cuisine Tradionnelle Française</p>
+      <div class="slogan">
+        <h2>Bienvenue Chez</h2>
+        <h1>La Croix Blanche</h1>
+        <p>Cuisine Tradionnelle Française</p>
+        <div class="drapeau">
+          <img src="/images/drapeau.svg" alt="Le drapeau français">
+        </div>
+      </div>
     </div>
   </header>
   <main>
     <section class="restaurant">
-      <div class="content">
+      <div class="container">
         <div class="titre">
           <h2>Le Restaurant</h2>
           <h3>Tradition & Modernité</h3>
@@ -30,35 +35,64 @@
           <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
         </div>
       </div>
-      <div class="slider"></div>
     </section>
+    <div class="slider">
+      <ul>
+        <li><img src="/images/slide-01.png" alt=""></li>
+        <li><img src="/images/slide-02.png" alt=""></li>
+        <li><img src="/images/slide-03.png" alt=""></li>
+        <li><img src="/images/slide-04.png" alt=""></li>
+        <li><img src="/images/slide-05.png" alt=""></li>
+        <li><img src="/images/slide-06.png" alt=""></li>
+        <li><img src="/images/slide-01.png" alt=""></li>
+        <li><img src="/images/slide-02.png" alt=""></li>
+        <li><img src="/images/slide-03.png" alt=""></li>
+        <li><img src="/images/slide-04.png" alt=""></li>
+        <li><img src="/images/slide-05.png" alt=""></li>
+        <li><img src="/images/slide-06.png" alt=""></li>
+      </ul>
+    </div>
     <section class="prestations">
-      <div class="titre">
-        <h2>Nos Prestations</h2>
-        <h3>Eveillez Vos Sens</h3>
-      </div>
-      <div class="texte-intro">
-        <p>Découvrez notre carte destinée au palais les plus fins. Laissez-vous porter par des saveurs aussi douces qu’explosives pour une expérience culinaire unique.</p>
-      </div>
-      <div class="prestations-container">
-        <div class="la-carte"></div>
-        <div class="la-cave"></div>
+      <div class="container">
+        <div class="titre">
+          <h2>Nos Prestations</h2>
+          <h3>Eveillez Vos Sens</h3>
+        </div>
+        <div class="texte-intro">
+          <p>Découvrez notre carte destinée au palais les plus fins. Laissez-vous porter par des saveurs aussi douces qu’explosives pour une expérience culinaire unique.</p>
+        </div>
+        <div class="grid-2">
+          <div class="card-la-carte fle-dir-col-cen-bot">
+            <h4>La Carte</h4>
+            <h5>Produits frais et de saison</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet feugiat metus, sit amet aliquet lacus. Ut in lorem eu lorem tristique condimentum. Donec iaculis lacus elit, sed viverra erat semper ac. Nulla a ex non leo suscipit cursus vel quis mi. Phasellus bibendum feugiat purus, ac convallis !</p>
+          </div>
+          <div class="card-la-cave fle-dir-col-cen-bot">
+            <h4>La Cave</h4>
+            <h5>Vins issus de grands vignobles</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet feugiat metus, sit amet aliquet lacus. Ut in lorem eu lorem tristique condimentum. Donec iaculis lacus elit, sed viverra erat semper ac. Nulla a ex non leo suscipit cursus vel quis mi. Phasellus bibendum feugiat purus, ac convallis !</p>
+          </div>
+        </div>
         <div class="cta">
-          <a href="" target="_blank">Lire la suite</a>
+          <a href="" target="_blank" class="bg-yel">Consultez les cartes</a>
         </div>
       </div>
     </section>
     <section class="qui-sommes-nous">
-      <div class="titre">
-        <h2>Qui Sommes-Nous ?</h2>
-        <h3>Notre Histoire</h3>
-      </div>
-      <div class="texte-presentation">
-        <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. Notre chef, Mohamed, avec plus de 20 ans d'expérience, crée des plats qui célèbrent les saveurs locales tout en ajoutant une touche moderne.</p>
-        <p>Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
-      </div>
-      <div class="cta">
-        <a href="" target="_blank">Lire la suite</a>
+      <div class="container">
+        <div class="titre">
+          <h2>Qui Sommes-Nous ?</h2>
+          <h3>Notre Histoire</h3>
+        </div>
+        <div class="grid-2">
+          <div class="texte-presentation">
+            <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. Notre chef, Mohamed, avec plus de 20 ans d'expérience, crée des plats qui célèbrent les saveurs locales tout en ajoutant une touche moderne.</p>
+            <p>Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
+          </div>
+        </div>
+        <div class="cta">
+          <a href="" target="_blank" class="bg-whi">Lire la suite</a>
+        </div>
       </div>
     </section>
     <section id="infos" class="infos-pratiques"></section>
