Structure du bloc infos pratiques & iframe map

--- a/infos_pratiques.html
+++ b/infos_pratiques.html
@@ -3,39 +3,45 @@
     <h2>Infos Pratiques</h2>
     <h3>Tout Savoir</h3>
   </div>
-  <div class="infos-pratiques-container">
-    <div class="acces">
-      <h4>Accès</h4>
-      <ul>
-        <li>Adresse : 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
-        <li>Parking : 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
-        <li>Bus : Ligne G - 2 - 82 - s57</li>
-      </ul>
-    </div>
-    <div class="horaires">
-      <h4>Horaires</h4>
-      <div class="semaine">
+  <div class="grid-2">
+    <div class="infos-pratiques-container">
+      <div class="acces">
+        <h4>Accès</h4>
         <ul>
-          <li><strong>Du lundi au vendredi</strong></li>
-          <li>Midi 12h00 - 14h00</li>
-          <li>Soir 19h00 - 22h00</li>
+          <li class="adresse"><span class="semi-bold">Adresse :</span> 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
+          <li class="parking"><span class="semi-bold">Parking :</span> 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
+          <li class="bus"><span class="semi-bold">Bus :</span> Ligne G - 2 - 82 - s57</li>
         </ul>
       </div>
-      <div class="week-end">
-        <ul>
-          <li><strong>Le samedi et dimanche</strong></li>
-          <li>Fermé</li>
-        </ul>
+      <div class="horaires">
+        <h4>Horaires</h4>
+        <div class="grid-2">
+          <div class="semaine">
+            <ul>
+              <li><span class="semi-bold">Du lundi au vendredi</span></li>
+              <li>Midi 12h00 - 14h00</li>
+              <li>Soir 19h00 - 22h00</li>
+            </ul>
+          </div>
+          <div class="week-end">
+            <ul>
+              <li><span class="semi-bold">Le samedi et dimanche</span></li>
+              <li>Fermé</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="services">
+        <h4>Services</h4>
+        <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande</p>
+      </div>
+      <div class="paiement">
+        <h4>Moyens de paiement</h4>
+        <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, tickets restaurants</p>
       </div>
     </div>
-    <div class="services">
-      <h4>Services</h4>
-      <p>Service en salle, en terrasse, chaise bébé, WC séparé, accès PMR, possibilité de plat vegan à la demande</p>
+    <div class="map-container">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.8597590251807!2d-0.5913256!3d44.844789299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd552779ecb7274b%3A0xbac69c6ced5d8359!2sRestaurant%20La%20Croix%20Blanche%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1723128939954!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="paiement">
-      <h4>Moyens de paiement</h4>
-      <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, tickets restaurants</p>
-    </div>
-    <div class="map"></div>
   </div>
 </div>
