--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
       <li class="nav-la-carte"><a href="la_carte.html">La carte</a></li>
       <li class="nav-a-propos"><a href="a_propos.html">À propos</a></li>
       <li class="nav-contact"><a href="contact.html">Contact</a></li>
-      <li class="nav-telephone"><img src="/images/icone-telephone.svg" alt="">05 56 30 97 89</li>
+      <li class="nav-telephone">05 56 30 97 89</li>
     </ul>
   </nav>
 </div>
