--- a/reservation.html
+++ b/reservation.html
@@ -5,11 +5,11 @@
   </div>
   <div class="reservation-container">
     <p>Vous pouvez nous joindre au :</p>
-    <p>05 56 30 97 89</p>
+    <p class="tel-contact">05 56 30 97 89</p>
     <p>OU par e-mail :</p>
-  </div>
-  <div class="cta">
-    <a href="" target="_blank">Demande de réservation *</a>
-    <p>* Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
+    <div class="cta fle-dir-col-cen-bot mtb-20">
+      <a href="" target="_blank" class="bg-blu">Demande de réservation <span class="red">*</span></a>
+    </div>
+    <p class="reservation-mentions"><span class="red">*</span> Toutes les demandes soumises par e-mail devront être validées de notre part pour que votre réservation soit enregistrée.</p>
   </div>
 </div>
