--- a/footer.html
+++ b/footer.html
@@ -1,31 +1,32 @@
-<div class="container">
-  <div class="coordonnees">
-    <h5>La Croix Blanche</h5>
-    <ul>
-      <li>05 56 30 97 89</li>
-      <li>62 rue de La Croix Blanche, 33000 BORDEAUX</li>
-      <li>Du lundi au vendredi 12h00 - 14h00 et 19h00 - 22h00</li>
-    </ul>
-  </div>
-  <div class="sous-navigation">
-    <h5>Navigation</h5>
-    <ul>
-      <li>Accueil</li>
-      <li>La carte</li>
-      <li>À Propos</li>
-      <li>Contact</li>
-    </ul>
-  </div>
-  <div class="reseaux-sociaux">
-    <h5>Retrouvez-moi sur</h5>
-    <div class="instagram"></div>
-    <div class="facebook"></div>
-    <div class="tripadvisor"></div>
-  </div>
-  <div class="mentions-legales">
-    <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par :</p>
-    <ul>
-      <li>nicolas-monmerque.com</li>
-    </ul>
+<div class="small-container">
+  <div class="grid-3">
+    <div class="coordonnees">
+      <h6>La Croix Blanche</h6>
+      <ul>
+        <li>05 56 30 97 89</li>
+        <li>62 rue de La Croix Blanche, <br>33000 BORDEAUX</li>
+        <li>Du lundi au vendredi <br>12h00 - 14h00 et 19h00 - 22h00</li>
+      </ul>
+    </div>
+    <div class="sous-navigation">
+      <h6>Navigation</h6>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="la_carte.html"></a>La carte</li>
+        <li><a href="a_propos.html"></a>À Propos</li>
+        <li><a href="contact.html"></a>Contact</li>
+      </ul>
+    </div>
+    <div class="reseaux-sociaux">
+      <h6>Retrouvez-nous</h6>
+      <ul>
+        <li class="instagram"><a href="" target="_blank"><img src="/images/icons/icon-instagram.svg" alt="Instagram"></a></li>
+        <li class="facebook"><a href="" target="_blank"><img src="/images/icons/icon-facebook-f.svg" alt="Facebook"></a></li>
+        <li class="tripadvisor"><a href="" target="_blank"><img src="/images/icons/icon-tripadvisor.svg" alt="TripAdvisor"></a></li>
+      </ul>
+    </div>
+    <div class="mentions-legales">
+      <p>© 2024 La Croix Blanche | Mentions légales | Politique de confidentialité | Réalisé par : <span class="dev-nm"></span> nicolas-monmerque.com | Photos : victor</p>
+    </div>
   </div>
 </div>
