Finiton de la structure et Création de la carte des vins

--- a/a_propos.html
+++ b/a_propos.html
@@ -121,6 +121,7 @@
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts.js"></script>
+  <script src="/scripts/swiper.js"></script>
 </body>
 </html>
