--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div id="navigation"></div>
-    <div class="header-container">
+    <div class="header-container-accueil">
       <div class="slogan">
         <h2>Bienvenue Chez</h2>
         <h1>La Croix Blanche</h1>
