Structure de la page a propos avec le swiper

--- a/la_carte.html
+++ b/la_carte.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="head-carte">
+  <header class="head-degr-1">
     <div id="navigation"></div>
     <div class="header-container-carte">
       <div class="full-container">
