Ajout et suppression de la couleur de fond de la nav

--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<div class="nav-container">
+<div class="nav-container" id="navScroll">
   <nav>
     <div class="logo">
       <a href="index.html"><img src="images/logo-lcb-nav.svg" alt="La Croix Blanche" width="60"></a>
