début de la navigation mobile

--- a/nav.html
+++ b/nav.html
@@ -3,6 +3,7 @@
     <div class="logo">
       <a href="index.html"><img src="images/logo-lcb-nav.svg" alt="La Croix Blanche" width="60"></a>
     </div>
+    <div id="icon"></div>
     <ul>
       <li class="nav-accueil"><a href="index.html">Accueil</a></li>
       <li class="nav-la-carte"><a href="la_carte.html">La carte</a></li>
